// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePage AsideContent matches snapshot 1`] = `
<div
  className="asideContent"
>
  <div
    className="largeAvatar avatar"
    title="test-user display name"
  >
    <span
      className="initials"
    >
      TT
    </span>
  </div>
  <h1
    className="mobileHeading"
  >
    <span>
      ProfilePage.mobileHeading
    </span>
  </h1>
</div>
`;

exports[`ProfilePage DesktopReviews matches snapshot 1`] = `
<div
  className="desktopReviews"
>
  <div
    className="desktopReviewsWrapper"
  >
    <ButtonTabNavHorizontal
      className="desktopReviewsTabNav"
      rootClassName={null}
      skin="light"
      tabClassName={null}
      tabRootClassName={null}
      tabs={
        Array [
          Object {
            "onClick": [Function],
            "selected": true,
            "text": <h3
              className="desktopReviewsTitle"
            >
              <Memo(MemoizedFormattedMessage)
                id="ProfilePage.reviewsFromMyCustomersTitle"
                values={
                  Object {
                    "count": 0,
                  }
                }
              />
            </h3>,
          },
          Object {
            "onClick": [Function],
            "selected": false,
            "text": <h3
              className="desktopReviewsTitle"
            >
              <Memo(MemoizedFormattedMessage)
                id="ProfilePage.reviewsAsACustomerTitle"
                values={
                  Object {
                    "count": 0,
                  }
                }
              />
            </h3>,
          },
        ]
      }
    />
    <ReviewsErrorMaybe
      queryReviewsError={null}
    />
    <injectIntl(ReviewsComponent)
      reviews={Array []}
    />
  </div>
</div>
`;

exports[`ProfilePage MainContent matches snapshot 1`] = `
<div>
  <h1
    className="desktopHeading"
  >
    <MemoizedFormattedMessage
      id="ProfilePage.desktopHeading"
      values={
        Object {
          "name": "john doe",
        }
      }
    />
  </h1>
  <p
    className="bio"
  >
    Lorem ipsum
  </p>
  <DesktopReviews
    queryReviewsError={null}
    reviews={Array []}
  />
</div>
`;

exports[`ProfilePage MobileReviews matches snapshot 1`] = `
<div
  className="mobileReviews"
>
  <h2
    className="mobileReviewsTitle"
  >
    <MemoizedFormattedMessage
      id="ProfilePage.reviewsFromMyCustomersTitle"
      values={
        Object {
          "count": 0,
        }
      }
    />
  </h2>
  <ReviewsErrorMaybe
    queryReviewsError={null}
  />
  <injectIntl(ReviewsComponent)
    reviews={Array []}
  />
  <h2
    className="mobileReviewsTitle"
  >
    <MemoizedFormattedMessage
      id="ProfilePage.reviewsAsACustomerTitle"
      values={
        Object {
          "count": 0,
        }
      }
    />
  </h2>
  <ReviewsErrorMaybe
    queryReviewsError={null}
  />
  <injectIntl(ReviewsComponent)
    reviews={Array []}
  />
</div>
`;

exports[`ProfilePage ReviewsErrorMaybe matches snapshot 1`] = `
<p
  className="error"
>
  <span>
    ProfilePage.loadingReviewsFailed
  </span>
</p>
`;
